--- a/secretmap/Base.lproj/Main.storyboard
+++ b/secretmap/Base.lproj/Main.storyboard
@@ -262,6 +262,8 @@
                     </view>
                     <connections>
                         <outlet property="contentImageView" destination="8rl-aB-WtY" id="rK0-ta-RO4"/>
+                        <outlet property="pageTitleView" destination="oJF-RD-5RA" id="bUH-SK-Vyj"/>
+                        <outlet property="subtitleView" destination="w9t-Xm-Xnh" id="mej-Z7-E94"/>
                         <outlet property="view" destination="FtQ-AS-qUF" id="9A9-0a-0nY"/>
                     </connections>
                 </viewController>
